--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,7 @@ h3 {
 h4 {
     font-family: "San Francisco";
     font-weight: 500;
-    line-height: 28px;
+    line-height: 30px;
     color: #222;
     font-size: 22px;
     margin: 20px auto;
@@ -340,7 +340,7 @@ nav.shrink .navbar-toggle {
 }
 
 .cta-back {
-    margin-top: 20px;
+    padding-top: 20px;
 }
 
 .cta-back:before {
@@ -1174,7 +1174,8 @@ fieldset[disabled] .form-control {
 }
 
 .project-montreal-cityline-img {
-    background-image: url('../img/montreal-cityline-by-Loogart.jpg');
+    background-image: url('../img/portfolio/montreal-cityline-phone-case.png');
+
 }
 .project-ets-cityline-img {
     background-image: url('../img/ets-cityline-by-loogart.jpg');
@@ -1209,8 +1210,7 @@ fieldset[disabled] .form-control {
 
 .img-portfolio {
     margin: 30px auto;
-    max-height: 300px;
-    width: 100%;
+    max-height:450px;
 }
 
 .img-portfolio-scroller {
@@ -1222,23 +1222,32 @@ fieldset[disabled] .form-control {
 section.portfolio-content p {
     font-family: "San Francisco";
     font-weight: 500;
-    line-height: 28px;
+    line-height: 30px;
     color: #222;
     font-size: 22px;
+    margin: 15px auto;
+}
+
+section.portfolio-content h1 {
+    font-family: "San Francisco";
+    font-weight: 700;
+    line-height: 42px;
+    color: #222;
+    font-size: 36px;
     margin: 20px auto;
 }
 
-section .portfolio-content h3 {
+section.portfolio-content h3 {
     font-family: "San Francisco";
     font-weight: 700;
     line-height: 28px;
     color: #222;
-    font-size: 28px;
-    margin: 20px auto;
+    font-size: 24px;
+    margin: 20px auto 12px;
 }
 
 .project-jumbotron {
-    height: 320px;
+    height: 420px;
     background-color: #e5e5e5;
     background-position: center;
     background-repeat: no-repeat;
@@ -1392,7 +1401,6 @@ section.contact p {
 
 /* validation styles */
 
-
 /*!
  * BootstrapValidator (http://bootstrapvalidator.com)
  * The best jQuery plugin to validate form fields. Designed to use with Bootstrap 3
@@ -1423,3 +1431,45 @@ section.contact p {
     display: none;
 }
 
+
+/* atvImg styling */
+    .tile {
+        width: 100%;
+        height: 320px;
+        margin: 30px auto
+    }
+    
+    .tile-wide {
+        width: 100%;
+        height: 420px;
+        margin: 40px auto 50px;
+    }
+    
+    .tile-phone {
+        width: 320px;
+        height: 569px;
+        margin: 40px auto 50px;
+    }
+    
+    h4 {
+        margin: 0 auto 12px;
+        font-size: 21px;
+        line-height: 1.3em
+    }
+    
+    p {
+        font-size: 14px;
+        line-height: 20px;
+    }
+    
+    .jumbotron {
+        margin-bottom: 0;
+        padding: 0;
+    }
+    
+    .scroll {
+        white-space: nowrap;
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        -ms-overflow-style: -ms-autohiding-scrollbar;
+    }
