--- a/css/style.css
+++ b/css/style.css
@@ -544,6 +544,10 @@ fieldset[disabled] .btn-white.focus {
     -ms-overflow-style: -ms-autohiding-scrollbar;
 }
 
+.scroll h5 {
+    color: #F75A56;
+}
+
 .carousel-loogs {
     width: 150px;
     height: 150px;
@@ -1175,8 +1179,8 @@ fieldset[disabled] .form-control {
 
 .project-montreal-cityline-img {
     background-image: url('../img/portfolio/montreal-cityline-phone-case.png');
-
 }
+
 .project-ets-cityline-img {
     background-image: url('../img/ets-cityline-by-loogart.jpg');
 }
@@ -1200,6 +1204,7 @@ fieldset[disabled] .form-control {
 .project-suite88-cityline-img {
     background-image: url('../img/suite88-chocolatier-cityline-by-loogart.jpg');
 }
+
 .project-otis-elevator-img {
     background-image: url('../img/otis-elevator-animated-illustration-by-loogart.gif');
 }
@@ -1210,7 +1215,7 @@ fieldset[disabled] .form-control {
 
 .img-portfolio {
     margin: 30px auto;
-    max-height:450px;
+    max-height: 450px;
 }
 
 .img-portfolio-scroller {
@@ -1401,6 +1406,7 @@ section.contact p {
 
 /* validation styles */
 
+
 /*!
  * BootstrapValidator (http://bootstrapvalidator.com)
  * The best jQuery plugin to validate form fields. Designed to use with Bootstrap 3
@@ -1433,43 +1439,37 @@ section.contact p {
 
 
 /* atvImg styling */
-    .tile {
-        width: 100%;
-        height: 320px;
-        margin: 30px auto
-    }
-    
-    .tile-wide {
-        width: 100%;
-        height: 420px;
-        margin: 40px auto 50px;
-    }
-    
-    .tile-phone {
-        width: 320px;
-        height: 569px;
-        margin: 40px auto 50px;
-    }
-    
-    h4 {
-        margin: 0 auto 12px;
-        font-size: 21px;
-        line-height: 1.3em
-    }
-    
-    p {
-        font-size: 14px;
-        line-height: 20px;
-    }
-    
-    .jumbotron {
-        margin-bottom: 0;
-        padding: 0;
-    }
-    
-    .scroll {
-        white-space: nowrap;
-        overflow-x: auto;
-        -webkit-overflow-scrolling: touch;
-        -ms-overflow-style: -ms-autohiding-scrollbar;
-    }
+
+.tile {
+    width: 100%;
+    height: 320px;
+    margin: 30px auto
+}
+
+.tile-wide {
+    width: 100%;
+    height: 420px;
+    margin: 40px auto 50px;
+}
+
+.tile-phone {
+    width: 320px;
+    height: 569px;
+    margin: 40px auto 50px;
+}
+
+h4 {
+    margin: 0 auto 12px;
+    font-size: 21px;
+    line-height: 1.3em
+}
+
+p {
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.jumbotron {
+    margin-bottom: 0;
+    padding: 0;
+}
