--- a/css/style.css
+++ b/css/style.css
@@ -1726,3 +1726,11 @@ http://flickity.metafizzy.co
 .img-spacing {
     margin: 30px auto;
 }
+
+/* video */
+.video-responsive{
+  margin:15px auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
