--- a/DEV/css/style.css
+++ b/DEV/css/style.css
@@ -294,6 +294,24 @@ nav.shrink .navbar-toggle {
     margin: 8px 15px 8px 0;
 }
 
+
+.logo-loogart {
+    display: inline-block;
+    width:120px;
+    height:32px;
+    background-image: url('../img/icons/logo-loogart.svg');
+    background-repeat: no-repeat;
+    background-position: left;
+    background-size: contain;
+    -webkit-transition: .25s;
+    transition: .25s;
+}
+
+nav.shrink .logo-loogart {
+    width:86px;
+    height:32px;
+}
+
 @media (max-width: 767px) {
     .navbar-default .navbar-nav .open .dropdown-menu > li > a {
         color: #222;
